[package]
name = "bitstream-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { version = "22.0", default-features = false }
frame-system = { version = "22.0", default-features = false }
pallet-balances = { version = "22.0" }
sp-runtime = { version = "22.0" }
sp-std = { version = "6.0" }
